# VisualSort

./: .gitignore  CMakeLists.txt  LICENSE  compile_commands.json
cmake/: FindSDL2.cmake
src/: BubbleSort.cpp  BubbleSort.h  Elements.hpp  ISort.hpp  InsertionSort.cpp  InsertionSort.h  Math.hpp  QuickSort.cpp  QuickSort.h  Renderer.cpp  Renderer.h  SelectionSort.cpp  SelectionSort.h  audio.c  main.cpp
